[tool.poetry]
name = "crossfire"
version = "0.2.0.2"
description = "crossfire: Download spatial data sets from crossfire project"
authors = ["Felipe Barros <felipe.b4rros@gmail.com>"]
readme = "README.md"
homepage = "https://fogocruzado.org.br/"
repository = "https://github.com/voltdatalab/crossfire"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
]
exclude =  ["man/", "R/", "tables/", "crossfire.Rproj", "DESCRIPTION", "env-example", "Introducao_crossfire.md",
    "Introduction_crossfire.md", "NAMESPACE",]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = { version = "^0.13.2", optional = true }
httpx = "^0.25.0"
pandas = { version = "^2.1.0", optional = true }
python-decouple = "^3.5"

[tool.poetry.extras]
df = ["pandas"]
geodf = ["geopandas", "pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-black-ng = "^0.4.1"
pytest-isort = "^3.1.0"
pytest-ruff = "^0.1.1"

[tool.pytest.ini_options]
addopts = "--black --isort --ruff"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
